--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,27 @@
   "name": "blacktower",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "shx rm -rf ./dist/ && tsc --project tsconfig.json",
+    "start": "npm run build && ts-node -r tsconfig-paths/register dist/index.js",
+    "watch": "nodemon --exec \"npm run start\" --ignore dist/"
   },
   "author": "AmbiSykhar",
   "license": "ISC",
   "dependencies": {
+    "@types/connect": "^3.4.38",
+    "@types/csso": "^5.0.4",
+    "@types/serve-static": "^1.15.7",
+    "@types/ws": "^8.5.12",
     "connect": "^3.7.0",
     "csso": "^5.0.5",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "serve-static": "^1.15.0",
+    "shx": "^0.3.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "ws": "^8.18.0"
   }
 }
