--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,12 @@
   "name": "blacktower",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "shx rm -rf ./dist/ && tsc --project tsconfig.json",
     "start": "npm run build && ts-node -r tsconfig-paths/register dist/index.js",
-    "watch": "nodemon --exec \"npm run start\" --ignore dist/"
+    "watch": "nodemon --ext \"ts,json\" --ignore dist/ --exec \"npm run start\""
   },
   "author": "AmbiSykhar",
   "license": "ISC",
@@ -21,8 +22,11 @@
     "fs": "^0.0.1-security",
     "serve-static": "^1.15.0",
     "shx": "^0.3.4",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
